--- a/UPLB-P2P.Website/Views/Shared/_Layout.cshtml
+++ b/UPLB-P2P.Website/Views/Shared/_Layout.cshtml
@@ -26,11 +26,11 @@
 							<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-								Admin
-							</a>
+							<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
+
 							<ul class="dropdown-menu">
 								<li><a class="dropdown-item" asp-area="" asp-controller="AdminUsers" asp-action="Add">Add User</a></li>
+								<li><a class="dropdown-item" asp-area="" asp-controller="Reviews" asp-action="Add">Add Reviews</a></li>
 							</ul>
 						</li>
 					</ul>
