- remove tailwind aspects

--- a/UPLB-P2P.Website/Pages/Dashboard.cshtml
+++ b/UPLB-P2P.Website/Pages/Dashboard.cshtml
@@ -1,12 +1,6 @@
-﻿@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@page
+﻿@page
 @model UPLB_P2P.Website.Pages.DashboardModel
 @{
-	
-	
 	ViewData["Title"] = "Dashboard";
 }
 
