--- a/P2P/P2P/Pages/Dashboard.razor
+++ b/P2P/P2P/Pages/Dashboard.razor
@@ -4,6 +4,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<Review ProfessorName="Prof. Von Vista" />
+			<Review ProfessorName="Ronnel Valencia" />
 		</div>
 	</div>
 </div>
